--- a/index.html
+++ b/index.html
@@ -4,26 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Animation</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="ed">
+    <span>S</span>
+    <span>I</span>
+    <span>D</span>
+    <span>D</span>
+    <span>H</span>
+    <span>A</span>  
     <span>N</span>
-    <span>A</span>
-    <span>Y</span>
-    <span>A</span>
-    <span>N</span>
+    <span>T</span>
 </div>
 <div class="ed2">
     
+    <span>P</span>
     <span>A</span>
-    <span>C</span>
+    <span>N</span>
+    <span>T</span>
     <span>H</span>
-    <span>A</span>
-    <span>R</span>
-    <span>Y</span>
-    <span>A</span>
+    <span>I</span>
+    
 </div>
 </body>
 </html>
